[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/minigame3/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/minigame3/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/minigame3/Chib_User.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/minigame3/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 285, 394, 0, 0, 0, 0, 789, 377, 0, 0, 0, 0, 322, 1245, 0, 0, 0, 0, 796, 1238, 0, 0, 0, 0, 285, 394 )
}

[node name="Game" type="Node"]
script = ExtResource( 1 )
Enemy = ExtResource( 2 )

[node name="Chib_User" parent="." instance=ExtResource( 3 )]
position = Vector2( 589, 315 )

[node name="Enemy_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Score_Timer" type="Timer" parent="."]

[node name="Start_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start_Position" type="Position2D" parent="."]
position = Vector2( 500, 850 )

[node name="Enemy_Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Enemy_Spawn" type="PathFollow2D" parent="Enemy_Path"]
position = Vector2( 285, 394 )
rotation = -0.0337056

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 494, 57 )
scale = Vector2( 2.76, 1 )

[connection signal="hit" from="Chib_User" to="." method="game_over"]
[connection signal="timeout" from="Enemy_Timer" to="." method="_on_Enemy_Timer_timeout"]
[connection signal="timeout" from="Score_Timer" to="." method="_on_Score_Timer_timeout"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
